# RTWaveSets

./: .gitignore  CMakeLists.txt  RTWaveSetPlayer.cpp  RTWaveSetPlayer.h
RTWaveSetsUGens/: RTWaveSetAnalysis.cpp  RTWaveSetAnalysis.h  RTWaveSetBase.cpp  RTWaveSetBase.h  RTWaveSetFeatureExtractor.cpp  RTWaveSetPlayer.cpp  RTWaveSetPlayer.h  RTWaveSetPlayerContinuous.cpp  RTWaveSetPlayerContinuous.h  RTWaveSetPlayerRepeat.cpp  RTWaveSetPlayerRepeat.h  RTWaveSetPlayerTriggered.cpp  RTWaveSetPlayerTriggered.h  RTWaveSetSelector.cpp  RTWaveSetSelector.h  RTWaveSetsUGens.cpp  RingBuffer.cpp  RingBuffer.h  WaveSet.cpp  WaveSet.h  WaveSetBuilderDualBuf.cpp  WaveSetBuilderDualBuf.h  WaveSetData.cpp  WaveSetData.h  WaveSetIterator.cpp  WaveSetIterator.h  WaveSetPlayer.cpp  WaveSetPlayer.h  WsAnalysis.cpp  WsAnalysis.h  WsStorage.h  WsStorageDualBuf.cpp  WsStorageDualBuf.h  soundringbuffer.cpp  soundringbuffer.h  waveset.cpp  waveset.h
RTWaveSetsUGens/sc/: RTWaveSetsUGens.sc
RTWaveSetsUGens/sc/HelpSource/Classes/: RTWaveSet.schelp  RTWaveSetAnalysis.schelp  RTWaveSetData.schelp  RTWaveSetFeatureExtractor.schelp  RTWaveSetPlayerContinuous.schelp  RTWaveSetPlayerTriggered.schelp  RTWaveSetSelector.schelp
classes/: RTWaveSet.sc
sc/: RTWaveSet-CrashReproducer.scd  RTWaveSet-extendedexample.scd  RTWaveSet-simpleTestNdef.scd  RTWaveSet-simpleTestNdef2.scd  RTWaveSet-verysimple.scd  WaveSetsGui.sc  WaveSetsGui.scd
src/: ScFFT.cpp  ScFFT.h  ScObject.cpp  ScObject.h  WsObject.cpp  WsObject.h
src/RTWaveSetUgens/: RTWaveSetAnalysis.cpp  RTWaveSetAnalysis.h  RTWaveSetBase.cpp  RTWaveSetBase.h  RTWaveSetFeatureExtractor.cpp  RTWaveSetFeatureExtractor.h  RTWaveSetPlayer.cpp  RTWaveSetPlayer.h  RTWaveSetPlayerContinuous.cpp  RTWaveSetPlayerContinuous.h  RTWaveSetPlayerTriggered.cpp  RTWaveSetPlayerTriggered.h  RTWaveSetSelector.cpp  RTWaveSetSelector.h  RTWaveSetsUGens.cpp  RTWavesetGetFeature.cpp  RTWavesetGetFeature.h  RTWavesetSynthContinuous.cpp  RTWavesetSynthContinuous.h  RTWavesetSynthTriggered.cpp  RTWavesetSynthTriggered.h  WavesetAnalysis.cpp  WavesetAnalysis.h  WavesetBase.cpp  WavesetBase.h  WavesetGetFeature.cpp  WavesetGetFeature.h  WavesetSelector.cpp  WavesetSelector.h  WavesetSynthContinuous.cpp  WavesetSynthContinuous.h  WavesetSynthTriggered.cpp  WavesetSynthTriggered.h  WavesetsUGens.cpp
src/WaveSetProcessing/: AudioPiece.cpp  AudioPiece.h  Synth.cpp  Synth.h  SynthContinuous.cpp  SynthContinuous.h  SynthParallel.cpp  SynthParallel.h  SynthTriggered.cpp  SynthTriggered.h  WaveSetBuilder.h  WaveSetIterator.cpp  Waveset.cpp  Waveset.h  WsAnalysis.cpp  WsAnalysis.h  WsFeatureExtractor.cpp  WsFeatureExtractor.h  WsGetFeature.cpp  WsGetFeature.h  WsMedatData.cpp  WsMedatData.h  WsPlayer.cpp  WsPlayer.h  WsSelector.cpp  WsSelector.h  WsStorage.cpp  WsStorage.h
src/WaveSetStorage/: AudioPieceDualBuf.cpp  AudioPieceDualBuf.h  RingBuffer.cpp  RingBuffer.h  WaveSet.h  WaveSetBuilderDualBuf.cpp  WaveSetBuilderDualBuf.h  WaveSetDualBuf.cpp  WaveSetDualBuf.h  WsStorageDualBuf.cpp  WsStorageDualBuf.h
src/sc/: RTWaveSetsUGens.sc  WavesetUGens.sc
src/sc/HelpSource/Classes/: RTWaveSetAnalysis.schelp  RTWaveSetData.schelp  RTWaveSetFeatureExtractor.schelp  RTWaveSetPlayerContinuous.schelp  RTWaveSetPlayerTriggered.schelp  RTWaveSetSelector.schelp  RTWavesetGetFeature.schelp  RTWavesetPlayerContinuous.schelp  RTWavesetPlayerTriggered.schelp  RTWavesetSynthContinuous.schelp  WSAnalyse.schelp  WSCont.schelp  WSData.schelp  WSFeature.schelp  WSSelect.schelp  WSTrig.schelp  WavesetAnalysis.schelp  WavesetData.schelp  WavesetGetFeature.schelp  WavesetPlayerContinuous.schelp  WavesetPlayerTriggered.schelp  WavesetSelector.schelp  WavesetSynthContinuous.schelp  WavesetSynthTriggered.schelp
